--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,7 +27,14 @@ shade:  #21387B
   padding-left: 20px;
 }
 
-.top-panel {grid-area: top;}
+.top-panel {
+  grid-area: top;
+  visibility: hidden;
+}
+
+#modeDiv {
+  visibility: hidden;
+}
 
 .corner {grid-area: corner;}
 
@@ -51,10 +58,6 @@ shade:  #21387B
   padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 .buttons {
   width: 100%;
   display: block;
@@ -62,4 +65,61 @@ shade:  #21387B
 
 #modeLabel {
   margin-top: 50px;
+}
+
+img {
+  height: 25px;
+  margin-left: -26px;
+  margin-bottom: -5px;
+}
+
+.dropbtn {
+  background-color: white;
+  color: black;
+  height: 30px;
+  padding: 5px;
+  cursor: pointer;
+  text-align: left;
+  border: black 1px solid;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  float: left;
+  text-align: left;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 240px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  text-align: left;
+}
+
+.dropdown-content ul {
+  padding: 0;
+  list-style: none;
+}
+
+.dropdown-content li {
+  color: black;
+  padding: 12px 16px;
+  display: block;
+}
+
+.dropdown-content li:hover {
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: white;
 }
